--- a/home.html
+++ b/home.html
@@ -11,13 +11,14 @@
          }
 
          body {
-            width: 100vw;
-            height: 100vh;
+            width: 100%;
+            height: 100%;
             background: black url(imagens/tela-home.jpg);
             background-repeat: no-repeat;
-            background-position: top, center;
+            background-position: top center;
             background-size: cover;
          }
+
     </style>
 </head>
 <body>
