--- a/home.html
+++ b/home.html
@@ -11,12 +11,10 @@
          }
 
          body {
-            width: 100%;
-            height: 100%;
-            background: black url(imagens/tela-home.jpg);
-            background-repeat: no-repeat;
-            background-position: top center;
-            background-size: cover;
+            width: 100vw;
+            height: 100vh;
+            background: black url(imagens/tela-home.jpg) no-repeat top center;
+            background-size: contain;
          }
 
     </style>
