--- a/instagram.html
+++ b/instagram.html
@@ -32,6 +32,11 @@
             padding: 20px;
             display: block;
         }
+
+         a:hover {
+                background-color: blue;
+         }
+
     </style>
 </head>
 <body>
