--- a/twitter.html
+++ b/twitter.html
@@ -32,6 +32,11 @@
             text-decoration: none;
             padding: 20px;
         }
+
+         a:hover {
+                background-color: rgb(99, 8, 107);
+         }
+
     </style>
 </head>
 <body>
