--- a/github.html
+++ b/github.html
@@ -33,6 +33,9 @@
             text-decoration: none;
             font-weight: bolder;
         }
+        a:hover {
+            background-color: rgb(80, 80, 80);
+        }
     </style>
 </head>
 <body>
